@@ -14,4 +14,5 @@ Marcel Holtmann <marcel@holtmann.org>
 	Primary maintainer.
 	CMTP parser.
 	HIDP parser.
+	HCRP parser.
 	CAPI parser.
