@@ -4,4 +4,7 @@
 
 noinst_LIBRARIES = libparser.a
 
-libparser_a_SOURCES  = parser.c parser.h hci.c l2cap.c rfcomm.c rfcomm.h sdp.c sdp.h bnep.c cmtp.c hidp.c capi.c
+libparser_a_SOURCES = \
+	parser.c parser.h hci.c l2cap.c \
+	rfcomm.c rfcomm.h sdp.c sdp.h \
+	bnep.c cmtp.c hidp.c hcrp.c capi.c \
