@@ -57,6 +57,7 @@ struct frame {
 #define FILT_BNEP	0x0020
 #define FILT_CMTP	0x0040
 #define FILT_HIDP	0x0080
+#define FILT_HCRP	0x0100
 
 #define FILT_CAPI	0x00010000
 
@@ -166,6 +167,7 @@ void sdp_dump(int level, struct frame *frm);
 void bnep_dump(int level, struct frame *frm);
 void cmtp_dump(int level, struct frame *frm);
 void hidp_dump(int level, struct frame *frm);
+void hcrp_dump(int level, struct frame *frm);
 
 void capi_dump(int level, struct frame *frm);
 
